bynkc/tests/fixtures/negative/334_par_traverse_try_in_pure_context/input.bynk
commons demo.ttpure
fn check(x: Int) -> Effect[Result[Int, String]] { Effect.pure(Ok(x)) }
fn bad(xs: List[Int]) -> Int {
  let r = xs.parTraverseTry((x: Int) => check(x))
  5
}
